JDK-8210791: Update release notes for JavaFX 11